log
Wed, Mar 19, 2025  8:25:05 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:39:46 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
b9b7d3f
Wed, Mar 19, 2025  8:40:20 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, *(int*)i);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
53a0aa4
